# snps

./: .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  LICENSE.txt  LICENSES-3RD-PARTY.txt  MANIFEST.in  Pipfile  README.md  README.rst  conftest.py  pyproject.toml  setup.cfg  setup.py  versioneer.py
.circleci/: config.yml
.github/workflows/: ci.yml  deploy.yml
analysis/parse-opensnp-files/: README.rst  get_file.py  parse_opensnp_files.py
analysis/xy-chrom-snp-ratios/: README.rst  xy-chrom-snp-ratios.py
docs/: Makefile  api.rst  conf.py  index.md  index.rst  installation.md  installation.rst  modules.rst  output_files.md  output_files.rst  requirements.txt  snps.md  snps.rst  snps_banner.md  snps_banner.rst
snps/: __init__.py
src/snps/: __init__.py  __init__copy.py  _version.py  build_constants.py  constants.py  ensembl.py  io.py  resources.py  snps.py  snps_collection.py  testing.py  utils.py
src/snps/io/: __init__.py  generator.py  reader.py  writer.py
tests/: __init__.py  test_reader.py  test_resources.py  test_snps.py  test_snps_collection.py
tests/input/: 23andme.txt  23andme_allele.txt  23andme_build36.txt  23andme_build37.txt  23andme_snps.txt  23andme_win.txt  23mofang.txt  DNALand.txt  GRCh37_PAR.csv  ancestry.txt  ancestry_mt.txt  ancestry_multi_sep.txt  circledna.txt  codigo46.txt  duplicate_rsids.csv  generic.fa  generic.tsv  generic_extra_column.tsv  generic_header_comment.tsv  generic_multi_rsid.tsv  generic_no_header.tsv  generic_non_standard_columns.tsv  genesforgood.txt  livingdna.csv  mapmygenome.txt  mapmygenome_alt_header.txt  mapmygenome_new_format.txt  myheritage_extra_quotes.csv  plink.txt  sano.txt  sano_dtc.txt  sano_dtc_no_comments.txt  selfdecode.txt  tellmeGen.txt  testvcf.vcf  testvcf_Dante.vcf  testvcf_Nebula.vcf  testvcf_b37.vcf  testvcf_chr_prefix.vcf  testvcf_hg19.vcf  (+3 more)
tests/io/: test_generator.py  test_reader.py  test_writer.py
tests/output/: vcf_chrom_prefix_chr.vcf  vcf_generic.vcf
tests/output/vcf_qc/: qc_only_F_qc_filter_F.vcf  qc_only_F_qc_filter_T.vcf  qc_only_T_qc_filter_F.vcf  qc_only_T_qc_filter_T.vcf
tests/resources/: chip_clusters.tsv  codigo46_chrpos_map.txt  codigo46_rsid_map.txt  dbsnp_151_37_reverse.txt  gsa_chrpos_map.txt  low_quality_snps.tsv
tests/support/: __init__.py  data.py  fake_resources.py
